  - Fix for endless loop when calculating a page alias in utf-8 environments 
  - Fix for endless loop when calculating a page alias and a page name/title ended with -
  - Fixes a notice on the login page
  - Optimize LoadContentFromId() to be typesafe, and use default page, if the id passed in is invalid
  - Fix error condition if there were no default default design, or default page template
  
  - #10825 - Admin-account settings don't remember startpage if you set one
  - #10874 - When creating a page and the title has specific characters, CMSMS stops responding
  - #10910 - content and content_module order incorrect Admin page
  - #10911 - 'Use Admin Search' permission not being used in 2.1.2
  - #10921 - Content Field to Display in Name Column not used

Navigator v1.0.3
  - Improved exception handling on install 

News v2.50.5
  - Fix error condition if no results were returned

Installation Assistant v1.0.3.1
  - Tweaks to README files
  - Improved error handling in some circumstances
  
FileManager
  - #10871 - Filemanager moving folder
 
Version 2.1.2 - Andros Town
----------------------------------
Core - General
- Minor fix to missing language string stuff
- Fixes to home page preferences
- API documentation fixes (minor)
- Fixes for ajax_content (the Ajax routine behind the parent selector in edit content) to handle ordering inconsistencies
- Remove die statement in is_email
- Minor fix to the relative_time modifier
- Upgrade CMSMailer to 6.2.14
- Now do a check for E_ALL in the system info

News v2.50.4
- Now all field definitions can be deleted
- Minor fix to default action if no results were returned...

ModuleManager v2.0.2
- Revamp module dependency calculations when installing a module
- Minor fix for some notices in install and upgrade modules
- Minor typo fixes
- Minor fixes for PHP7

MenuManager  v1.50.2
- make sure that uninstall cleans up properly

MicroTiny v2.0.3
- minor template fix
- fixes for stylesheet overrides

